# crowdshield

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: package-lock.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/about/: page.tsx
app/src/app/card/[id]/: page.tsx
app/src/app/cards/: page.tsx
app/src/app/event/[id]/: page.tsx
app/src/app/packs/: page.tsx
app/src/components/: CardCollection.tsx  ControversyGauge.tsx  CoverNFTCard.tsx  CoverSelector.tsx  EventCard.tsx  Navbar.tsx  PackOpener.tsx  PackStore.tsx  PollWidget.tsx  ResolutionSimulator.tsx  ShieldCard.tsx  SocialFeed.tsx
app/src/lib/: card-data.ts  cover-pricing.ts  mock-data.ts  types.ts
pitch/: DEMO_SCRIPT.md  GAME_THEORY.md  PITCH.md  PITCH_3MIN.md  PITCH_TODAY.md  README.md  RHETORIC.md  generate-pdf.py
programs/crowdshield/: Cargo.toml
programs/crowdshield/src/: errors.rs  lib.rs  state.rs
programs/crowdshield/src/instructions/: buy_cover.rs  claim_bond.rs  claim_payout.rs  create_event.rs  deposit_liquidity.rs  mint_ticket.rs  mod.rs  resolve.rs  update_controversy.rs  withdraw_liquidity.rs
tests/: crowdshield.ts
