[package]
name = "crowdshield"
version = "0.1.0"
description = "Fan event protection protocol — covers against cancellation, delays, and more"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdshield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
